--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <xtend.version>2.3.0-SNAPSHOT</xtend.version>
+    <xtend.version>2.3.0</xtend.version>
     <guava.version>12.0</guava.version>
     <junit.version>4.10</junit.version>
   </properties>
